# mc_peltdetect

./: .gitignore  README.md  pyproject.toml
notebooks/: demo.ipynb
notebooks/.ipynb_checkpoints/: demo-checkpoint.ipynb
peltdetect/: api.py
peltdetect/charts/: run.py
peltdetect/experiments/online/: __init__.py  eval_models.py  metrics.py  sim.py  truth.py
peltdetect/mc_pelt/: __init__.py  alerts.py  preprocess.py
scripts/: run_batch_collection_pelt.py  run_online_eval_single_source.py
src/peltdetect/: __init__.py  cli.py
src/peltdetect/charts/: __init__.py  online.py  run.py
src/peltdetect/experiments/online/: first_detection.py  match.py  sim.py
src/peltdetect/mc_pelt/: __init__.py  detect.py  io.py  models.py
